--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -36,15 +36,26 @@
         Furthermore, like white-box tools, these tools fail to take into account the environment in which the
         application is running.
 
-    \subsection{Definitions}
-        \textbf{This is a temporary section for collecting definitions. It will likely be removed in the final paper as
-        these definitions are worked into the body of the paper.}
-        \begin{enumerate}
-            \item{\textbf{Sample Trace}: a trace collected from an application running in a targeted deployment
-                environment}
-            \item{\textbf{Original Trace}: a trace collected from the application under test while it was running in an
-                its original development environment}
-        \end{enumerate}
+
+    \subsection{What is an ``environment''}
+
+    An application's environment is the collection of all resources external to the application with which the
+    application communicates.  These external resources can be thought of as an implicit input to the program as their
+    presence and contents alter the flow of any application executed in there presence.  This work is concerned with bugs
+    that arise from subtle differences in behavior between executions in one environment versus another. Specifically, the
+    files and network communications visible through the monitoring the system calls the application makes during the course
+    of its execution.  Consider the following hypothetical example: an application utilizing the POSIX API is executed on a
+    Linux machine and an OS X machine.  Because the API's called in each situation superficially act the same, a developer might
+    make the assumption that they are identical in all regards -- an assumption that will result in bugs when in cases where
+    it does not hold.
+
+    Another interesting case is the situation where the actual API's in question work correctly but the resources they
+    operate on do not.  Consider the case where an application is executed on two different hosts with the same environment
+    present locally but connected two different networks.  In this case, differences in the network itself can cause issues
+    with the application's execution.  For example, if the application assumes that it will receive messages of a particular
+    length from a network host it will not execute correctly when messages of that length are dropped, or fragmented, by a
+    intermediary host with strict MTU requirements. \emph{Do I need to define/describe MTU here? -Preston}
+
 
     \subsection{A Real World Example}
 
