--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -36,8 +36,7 @@
     Furthermore, like white-box tools, these tools fail to take into account the environment in which the
     application is running.
 
-
-    \subsection{What is an ``environment''}
+    \subsection{What is an ``Environment''}
 
     An application's environment is the collection of all resources external to the application with which the
     application communicates.  These external resources can be thought of as an implicit input to the program as their
@@ -55,7 +54,6 @@
     with the application's execution.  For example, if the application assumes that it will receive messages of a particular
     length from a network host it will not execute correctly when messages of that length are dropped, or fragmented, by a
     intermediary host with strict MTU requirements. \emph{Do I need to define/describe MTU here? -Preston}
-
 
     \subsection{A Real World Example}
 
